# super-stats-bros-backend

./: README
assets/dmg_numbers/: 0.tga  1.tga  2.tga  3.tga  4.tga  5.tga  6.tga  7.tga  8.tga  9.tga
assets/stage_names/: battlefield.tga  big_blue.tga  brinstar.tga  brinstar_depths.tga  corneria.tga  dream_land_n64.tga  final_destination.tga  flat_zone.tga  fountain_of_dreams.tga  fourside.tga  great_bay.tga  green_greens.tga  icicle_mountain.tga  jungle_japes.tga  kongo_jungle.tga  kongo_jungle_n64.tga  mushroom_kingdom.tga  mushroom_kingdom_ii.tga  mute_city.tga  onett.tga  poke_floats.tga  pokemon_stadium.tga  princess_peachs_castle.tga  rainbow_cruise.tga  random.tga  temple.tga  venom.tga  yoshis_island.tga  yoshis_island_n64.tga  yoshis_story.tga
assets/text/: back.tga
src/: CMakeLists.txt
src/CMakeModules/: FindTesseract.cmake
src/imgproc/: CMakeLists.txt  localization_params.cpp  localization_params.hpp  template.cpp  template.hpp  tessocr.cpp  tessocr.h  tessocr.hpp
src/superstatsbros/: CMakeLists.txt  constants.hpp  game_state.cpp  game_state.hpp  image_util.cpp  image_util.hpp  localization_params.cpp  localization_params.hpp  main.cpp  template.cpp  template.hpp  tess_ocr_example.cpp
src/util/: constants.hpp
